[gd_scene load_steps=2 format=3 uid="uid://82lmtoulr6lj"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_7q0d7"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7q0d7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 98.0
offset_bottom = 109.0
color = Color(0.360784, 0.360784, 0.360784, 0.819608)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ResumeBtn" type="MenuButton" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="SettingsBtn" type="MenuButton" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="MainMenuBtn" type="MenuButton" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsBtn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuBtn" to="." method="_on_main_menu_btn_pressed"]
